NEWS/Change Log for LFPStreamKeepersData package
------------------------------------------------

0.2-1 2013-09-29
        o Added Site.barplot to NAMESPACE, making it an
	  externally visible function.

0.2-0 2013-07-20
        o New Data for July Testing.
	o Add 2006 - 2011 to rawQualityData.csv
	o Moved SetUpAndRun.R out of package because it
          operates directly on package.
	o Added XLConnect, rJava to Recommended because
	  loadBIBI requires them.
        o export lfpskLoadQualityData.

0.1-6 2013-03-16
        o Tweaked Site.barplot() to put legend on first bar.

0.1-5 2013-03-16
        o Tweaked Site.barplot() to allow legend to work.

0.1-4 2013-02-08
	o plotBIBI.r - added Site.barplot() function

0.1-3 2013-01-29
    o Added 1/19/2013 data fto rawQualityData.csv
	  - Dropped ratings columns because they shouuld be calculated.
	  - Dropped Temp Celcius column because it can be calculated.
	  - Added Turbidity column: Need to go through old data and fix
	    sky and turbidity data.

0.1-2 2013-01-25
	o Made BIBI data visible to the Revo Project.
	o Normalizing rawQualityData.csv
	  Removed aprostophes (single quotes) from reach names,
	  Removed trailing commas.

0.1-1 2013-01-23
    o Added rawQualityData.csv, skeliton of data set documentation.
      rawQualityData.csv needs cleaning: read.table doesn't like it.

0.1-0 2013-01-16
    o loadBIBI.r loads all of the BIBI scoring data into bibiScoringData
      object.  Now ready to start working on plotting this data.
    o Added 2008 BIBI data.

0.0-5 2013-01-14
    o Added Replicate column to readScoringXLS, assigned replicate values.
    o Added readScoringXLS to namespace.

0.0-4 2013-01-13
    o generalized LyonFiene2007 load data function to
      Added readScoringXLS load data function.

0.0-3 2013-01-11
    o Added Lyon Fiene 2007 load data function

0.0-2 2012-12-23
    o Adding Benthic Details Data.

0.0-1 2012-12-23
    o Initial Version
    o LFP StreamKeepers bibiSummaryData.csv